add game balance test
